precompiles/utils/macro/tests/precompile/compile-fail/pre-check/wrong-parameter.stderr
error: This parameter must have type `&mut impl PrecompileHandle`
  --> tests/precompile/compile-fail/pre-check/wrong-parameter.rs:24:18
   |
24 |     fn pre_check(_: u32) {
   |                     ^^^
